--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "latest",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "latest",
+    "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
+    "@mui/x-charts": "^6.18.7",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
