--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
     "@mui/x-charts": "^6.18.7",
+    "@mui/x-data-grid": "^6.18.7",
+    "@mui/x-data-grid-generator": "^6.18.7",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
